// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerAbgangsgruende 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    LehrerAbgangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 1,
      "kuerzel": "RUHEST",
      "schluessel": "11",
      "text": "Eintritt in den Ruhestand",
    },
    LehrerAbgangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 2,
      "kuerzel": "UNFÄHIGK",
      "schluessel": "12",
      "text": "Dienst-, Erwerbs-, Berufsunfähigkeit",
    },
    LehrerAbgangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 3,
      "kuerzel": "TOD",
      "schluessel": "13",
      "text": "Tod",
    },
    LehrerAbgangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 4,
      "kuerzel": "AndBuLand",
      "schluessel": "14",
      "text": "Übertritt in den Schuldienst eines anderen Bundeslandes",
    },
    LehrerAbgangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 5,
      "kuerzel": "WECHSEL",
      "schluessel": "15",
      "text": "Wechsel innerhalb des Landes von der berichtenden Schule an eine andere Schule",
    },
    LehrerAbgangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 6,
      "kuerzel": "BEFRIST",
      "schluessel": "16",
      "text": "Befristete Abgänge",
    },
    LehrerAbgangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 7,
      "kuerzel": "SONSTIG",
      "schluessel": "17",
      "text": "Sonstige Abgänge",
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 7,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerBeschaeftigungsarten 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 1,
      "kuerzel": "V",
      "schluessel": "V",
      "text": "Vollzeit",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 2,
      "kuerzel": "T",
      "schluessel": "T",
      "text": "Teilzeit",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 3,
      "kuerzel": "AT",
      "schluessel": "AT",
      "text": "Altersteilzeit (Beschäftigungsphase)",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 4,
      "kuerzel": "TA",
      "schluessel": "TA",
      "text": "Altersteilzeit, vorm. teilzeitbeschäftigt (Verzichtsphase Altersermäßigung)",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 5,
      "kuerzel": "VA",
      "schluessel": "VA",
      "text": "Altersteilzeit, vorm. vollzeitbeschäftigt (Verzichtsphase Altersermäßigung)",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 6,
      "kuerzel": "TS",
      "schluessel": "TS",
      "text": "Teilzeitbeschäftigung im Blockmodell (§ 65 LBG), ehemals Sabbatjahr",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 8,
      "kuerzel": "SB",
      "schluessel": "SB",
      "text": "Angestellte, nebenberuflich",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 9,
      "kuerzel": "GB",
      "schluessel": "GB",
      "text": "Geringfügige Beschäftigung",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": 2023,
      "gueltigVon": null,
      "id": 11,
      "kuerzel": "ST",
      "schluessel": "ST",
      "text": "Studierende",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 12,
      "kuerzel": "NA",
      "schluessel": "NA",
      "text": "Beamte, nebenamtlich (nicht hauptamtlich im Schuldienst)",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 13,
      "kuerzel": "G",
      "schluessel": "G",
      "text": "Gestellungsvertrag",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 15,
      "kuerzel": "X",
      "schluessel": "X",
      "text": "Unentgeltlich Beschäftigte",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 16,
      "kuerzel": "WT",
      "schluessel": "WT",
      "text": "Beamte auf Widerruf (LAA) in Teilzeit",
    },
    LehrerBeschaeftigungsartKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 17,
      "kuerzel": "WV",
      "schluessel": "WV",
      "text": "Beamte auf Widerruf (LAA) in Vollzeit",
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 14,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerEinsatzstatus 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    LehrerEinsatzstatusKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 1,
      "kuerzel": "A",
      "schluessel": "A",
      "text": "Stammschule, ganz oder teilweise auch an anderen Schulen tätig",
    },
    LehrerEinsatzstatusKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 2,
      "kuerzel": "B",
      "schluessel": "B",
      "text": "nicht Stammschule, aber auch hier tätig",
    },
    LehrerEinsatzstatusKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 3,
      "kuerzel": "*",
      "schluessel": "*",
      "text": "Stammschule, nur hier tätig",
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 3,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerLeitungsfunktionen 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    LehrerLeitungsfunktionKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 1,
      "kuerzel": "SL",
      "schluessel": "SL",
      "text": "Schulleitung",
    },
    LehrerLeitungsfunktionKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 2,
      "kuerzel": "Stv. SL",
      "schluessel": "Stv. SL",
      "text": "Stellvertretende Schulleitung",
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 2,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerListe 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    LehrerListeEintrag {
      "id": 1,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "ALBE",
      "nachname": "Albers",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 106,
      "titel": "",
      "vorname": "Mike",
    },
    LehrerListeEintrag {
      "id": 2,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "ALEN",
      "nachname": "Alencon",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 259,
      "titel": "",
      "vorname": "Sabine",
    },
    LehrerListeEintrag {
      "id": 3,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "ANDE",
      "nachname": "Anders",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 82,
      "titel": "",
      "vorname": "Doreen",
    },
    LehrerListeEintrag {
      "id": 4,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BAGI",
      "nachname": "Bagienski",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": false,
      "sortierung": 255,
      "titel": "",
      "vorname": "Melanie",
    },
    LehrerListeEintrag {
      "id": 5,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BALD",
      "nachname": "Baldes",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 241,
      "titel": "",
      "vorname": "Maria",
    },
    LehrerListeEintrag {
      "id": 6,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BECK",
      "nachname": "Beckmann",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 165,
      "titel": "",
      "vorname": "Kathrin, Katrin",
    },
    LehrerListeEintrag {
      "id": 7,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BERG",
      "nachname": "Berg",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 109,
      "titel": "",
      "vorname": "Antje",
    },
    LehrerListeEintrag {
      "id": 8,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BERK",
      "nachname": "Berkow",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 138,
      "titel": "",
      "vorname": "Katharina",
    },
    LehrerListeEintrag {
      "id": 9,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BISZ",
      "nachname": "Biszkeborn",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 221,
      "titel": "",
      "vorname": "Stephan",
    },
    LehrerListeEintrag {
      "id": 10,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BRUN",
      "nachname": "Brunink",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 269,
      "titel": "",
      "vorname": "Torsten",
    },
    LehrerListeEintrag {
      "id": 11,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BURT",
      "nachname": "Burtenbach",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": false,
      "sortierung": 32000,
      "titel": "",
      "vorname": "Phillipp",
    },
    LehrerListeEintrag {
      "id": 12,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "BYRC",
      "nachname": "Byrch",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 275,
      "titel": "",
      "vorname": "Ute",
    },
    LehrerListeEintrag {
      "id": 13,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "CHR1",
      "nachname": "Christensen",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 261,
      "titel": "",
      "vorname": "Katharina",
    },
    LehrerListeEintrag {
      "id": 14,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "CHRI",
      "nachname": "Christiani",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 63,
      "titel": "",
      "vorname": "Juliane",
    },
    LehrerListeEintrag {
      "id": 15,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "COOK",
      "nachname": "Cook",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 149,
      "titel": "",
      "vorname": "Marcel",
    },
    LehrerListeEintrag {
      "id": 16,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "CRUS",
      "nachname": "Cruse",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 133,
      "titel": "",
      "vorname": "Dominik",
    },
    LehrerListeEintrag {
      "id": 17,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "DIEB",
      "nachname": "Diebitsch-Oeitersdorf",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 177,
      "titel": "",
      "vorname": "Nadine",
    },
    LehrerListeEintrag {
      "id": 18,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "DIED",
      "nachname": "Diederich",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 21,
      "titel": "",
      "vorname": "Martin",
    },
    LehrerListeEintrag {
      "id": 19,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "DURR",
      "nachname": "Durr",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 260,
      "titel": "",
      "vorname": "Uwe",
    },
    LehrerListeEintrag {
      "id": 20,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "EILI",
      "nachname": "Eiligmann",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 274,
      "titel": "",
      "vorname": "Marco",
    },
    LehrerListeEintrag {
      "id": 21,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "ERZI",
      "nachname": "Erzig",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 272,
      "titel": "",
      "vorname": "Ursula",
    },
    LehrerListeEintrag {
      "id": 22,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "FALK",
      "nachname": "Falkenhagen",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 270,
      "titel": "",
      "vorname": "Barbara",
    },
    LehrerListeEintrag {
      "id": 23,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "FLET",
      "nachname": "Fletcher",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 22,
      "titel": "",
      "vorname": "Jens",
    },
    LehrerListeEintrag {
      "id": 24,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "FLEU",
      "nachname": "Fleury",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 250,
      "titel": "",
      "vorname": "Michael",
    },
    LehrerListeEintrag {
      "id": 25,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "FONC",
      "nachname": "Fonck",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 136,
      "titel": "",
      "vorname": "Katharina",
    },
    LehrerListeEintrag {
      "id": 26,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "FONT",
      "nachname": "Fontaine",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 90,
      "titel": "",
      "vorname": "Janina",
    },
    LehrerListeEintrag {
      "id": 27,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "FORE",
      "nachname": "Forel",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 119,
      "titel": "",
      "vorname": "Sophia",
    },
    LehrerListeEintrag {
      "id": 28,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "FUSE",
      "nachname": "Fusenig",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 110,
      "titel": "",
      "vorname": "Doreen",
    },
    LehrerListeEintrag {
      "id": 29,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "GERO",
      "nachname": "Gerok",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 191,
      "titel": "",
      "vorname": "Antje",
    },
    LehrerListeEintrag {
      "id": 30,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "GÖRG",
      "nachname": "Görgen",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 102,
      "titel": "",
      "vorname": "Sandra",
    },
    LehrerListeEintrag {
      "id": 31,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "GRAF",
      "nachname": "Graf",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 11,
      "titel": "",
      "vorname": "Swen",
    },
    LehrerListeEintrag {
      "id": 32,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "GUNT",
      "nachname": "Guntermann",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 271,
      "titel": "",
      "vorname": "Andrea",
    },
    LehrerListeEintrag {
      "id": 33,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "HAHN",
      "nachname": "Hahn",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 6,
      "titel": "",
      "vorname": "Martin",
    },
    LehrerListeEintrag {
      "id": 34,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "HEMM",
      "nachname": "Hemmes",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 57,
      "titel": "",
      "vorname": "Petra",
    },
    LehrerListeEintrag {
      "id": 35,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "HES1",
      "nachname": "Hesse",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 184,
      "titel": "",
      "vorname": "Kerstin",
    },
    LehrerListeEintrag {
      "id": 36,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "HESS",
      "nachname": "Hesse",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 88,
      "titel": "",
      "vorname": "Martin",
    },
    LehrerListeEintrag {
      "id": 37,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "HEYK",
      "nachname": "Heyking",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 18,
      "titel": "",
      "vorname": "Markus",
    },
    LehrerListeEintrag {
      "id": 38,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "HINZ",
      "nachname": "Hinz",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 20,
      "titel": "",
      "vorname": "Angelika",
    },
    LehrerListeEintrag {
      "id": 39,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "HOLT",
      "nachname": "Holten",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 225,
      "titel": "",
      "vorname": "Marko",
    },
    LehrerListeEintrag {
      "id": 40,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "JANI",
      "nachname": "Janitzki",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 97,
      "titel": "",
      "vorname": "Patrick",
    },
    LehrerListeEintrag {
      "id": 41,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "JENß",
      "nachname": "Jenßen",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": false,
      "sortierung": 238,
      "titel": "",
      "vorname": "Dennis",
    },
    LehrerListeEintrag {
      "id": 42,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "JOHA",
      "nachname": "Johansdotter",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 67,
      "titel": "",
      "vorname": "Claudia",
    },
    LehrerListeEintrag {
      "id": 43,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "JOR1",
      "nachname": "Jordan",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 163,
      "titel": "",
      "vorname": "Silke",
    },
    LehrerListeEintrag {
      "id": 44,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "JORD",
      "nachname": "Jordan",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 46,
      "titel": "",
      "vorname": "Birgit",
    },
    LehrerListeEintrag {
      "id": 45,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "KERR",
      "nachname": "Kerridge",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 204,
      "titel": "",
      "vorname": "Jürgen",
    },
    LehrerListeEintrag {
      "id": 46,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "KLEY",
      "nachname": "Kleybold",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 17,
      "titel": "",
      "vorname": "Claudia",
    },
    LehrerListeEintrag {
      "id": 47,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "KNIP",
      "nachname": "Knippel",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 153,
      "titel": "",
      "vorname": "Simone",
    },
    LehrerListeEintrag {
      "id": 48,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "KREU",
      "nachname": "Kreutz",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 30,
      "titel": "",
      "vorname": "Dirk",
    },
    LehrerListeEintrag {
      "id": 49,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "LAHN",
      "nachname": "Lahnstein",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 218,
      "titel": "",
      "vorname": "Ulrich",
    },
    LehrerListeEintrag {
      "id": 50,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "LAN1",
      "nachname": "Lange",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 98,
      "titel": "",
      "vorname": "Karolin",
    },
    LehrerListeEintrag {
      "id": 51,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "LANG",
      "nachname": "Langes",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 9,
      "titel": "",
      "vorname": "Antje",
    },
    LehrerListeEintrag {
      "id": 52,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "LIES",
      "nachname": "Liese",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 71,
      "titel": "",
      "vorname": "Anna",
    },
    LehrerListeEintrag {
      "id": 53,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "LOFT",
      "nachname": "Loftin",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 162,
      "titel": "",
      "vorname": "Ralph",
    },
    LehrerListeEintrag {
      "id": 54,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "MAGH",
      "nachname": "Magh",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 176,
      "titel": "",
      "vorname": "Markus",
    },
    LehrerListeEintrag {
      "id": 55,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "MATS",
      "nachname": "Matschke",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 239,
      "titel": "",
      "vorname": "Paul",
    },
    LehrerListeEintrag {
      "id": 56,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "MAUN",
      "nachname": "Maunert",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 73,
      "titel": "",
      "vorname": "Florian",
    },
    LehrerListeEintrag {
      "id": 57,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "MAUR",
      "nachname": "Mauritius",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 108,
      "titel": "",
      "vorname": "Anja",
    },
    LehrerListeEintrag {
      "id": 58,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "MEY",
      "nachname": "Mey",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 127,
      "titel": "",
      "vorname": "Jessica",
    },
    LehrerListeEintrag {
      "id": 59,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "MOHN",
      "nachname": "Mohnke",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 79,
      "titel": "",
      "vorname": "Annett",
    },
    LehrerListeEintrag {
      "id": 60,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "NECK",
      "nachname": "Necker",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 128,
      "titel": "",
      "vorname": "Sandra",
    },
    LehrerListeEintrag {
      "id": 61,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "OLDI",
      "nachname": "Oldigs",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 65,
      "titel": "",
      "vorname": "Marina",
    },
    LehrerListeEintrag {
      "id": 62,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "ORTH",
      "nachname": "Orth",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 13,
      "titel": "",
      "vorname": "Daniel",
    },
    LehrerListeEintrag {
      "id": 63,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "PETE",
      "nachname": "Peters",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 114,
      "titel": "",
      "vorname": "Vanessa",
    },
    LehrerListeEintrag {
      "id": 64,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "RATJ",
      "nachname": "Ratjen",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": false,
      "sortierung": 278,
      "titel": "",
      "vorname": "Jan",
    },
    LehrerListeEintrag {
      "id": 65,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "ROCK",
      "nachname": "Rockel",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 231,
      "titel": "",
      "vorname": "Tanja",
    },
    LehrerListeEintrag {
      "id": 66,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "RÖPE",
      "nachname": "Röper",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 234,
      "titel": "",
      "vorname": "Sabrina",
    },
    LehrerListeEintrag {
      "id": 67,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "ROSE",
      "nachname": "Rosendaal",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 93,
      "titel": "",
      "vorname": "Lukas",
    },
    LehrerListeEintrag {
      "id": 68,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SCH1",
      "nachname": "Schulte-Brewing",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 91,
      "titel": "",
      "vorname": "Klaudia",
    },
    LehrerListeEintrag {
      "id": 69,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SCH2",
      "nachname": "Schulte-Heiming",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 185,
      "titel": "",
      "vorname": "Marina",
    },
    LehrerListeEintrag {
      "id": 70,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SCHA",
      "nachname": "Schassen",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 257,
      "titel": "",
      "vorname": "Martin",
    },
    LehrerListeEintrag {
      "id": 71,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SCHÖ",
      "nachname": "Schöne",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 85,
      "titel": "",
      "vorname": "Anne",
    },
    LehrerListeEintrag {
      "id": 72,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SCHU",
      "nachname": "Schuster",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 68,
      "titel": "",
      "vorname": "Andreas",
    },
    LehrerListeEintrag {
      "id": 73,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SCHW",
      "nachname": "Schwannemann",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 181,
      "titel": "",
      "vorname": "Marina",
    },
    LehrerListeEintrag {
      "id": 74,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SIEB",
      "nachname": "Siebel",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 111,
      "titel": "",
      "vorname": "Tanja",
    },
    LehrerListeEintrag {
      "id": 75,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SIEV",
      "nachname": "Sieverts",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 273,
      "titel": "",
      "vorname": "Susanne",
    },
    LehrerListeEintrag {
      "id": 76,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SPEC",
      "nachname": "Specking",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 62,
      "titel": "",
      "vorname": "Torsten",
    },
    LehrerListeEintrag {
      "id": 77,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "SPLI",
      "nachname": "Spliedt",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 124,
      "titel": "",
      "vorname": "Thomas",
    },
    LehrerListeEintrag {
      "id": 78,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "STAE",
      "nachname": "Staels",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 77,
      "titel": "",
      "vorname": "Daniela",
    },
    LehrerListeEintrag {
      "id": 79,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "STÄH",
      "nachname": "Stähler",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 64,
      "titel": "",
      "vorname": "Annett",
    },
    LehrerListeEintrag {
      "id": 80,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "STEF",
      "nachname": "Steffen",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 154,
      "titel": "",
      "vorname": "Sandra",
    },
    LehrerListeEintrag {
      "id": 81,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "STON",
      "nachname": "Stone",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 38,
      "titel": "",
      "vorname": "Heike",
    },
    LehrerListeEintrag {
      "id": 82,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "THEI",
      "nachname": "Theis",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 89,
      "titel": "",
      "vorname": "Simone",
    },
    LehrerListeEintrag {
      "id": 83,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "USED",
      "nachname": "Usedom",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 164,
      "titel": "",
      "vorname": "Diana",
    },
    LehrerListeEintrag {
      "id": 84,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "WELL",
      "nachname": "Weller",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 205,
      "titel": "",
      "vorname": "Eric",
    },
    LehrerListeEintrag {
      "id": 85,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "WILU",
      "nachname": "Wilutzky",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 76,
      "titel": "",
      "vorname": "Sara",
    },
    LehrerListeEintrag {
      "id": 86,
      "istRelevantFuerStatistik": true,
      "istSichtbar": true,
      "kuerzel": "ZIME",
      "nachname": "Zimen",
      "personTyp": "LEHRKRAFT",
      "referenziertInAnderenTabellen": true,
      "sortierung": 87,
      "titel": "",
      "vorname": "Lukas",
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 86,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerListe 2`] = `
LehrerListeEintrag {
  "id": 1,
  "istRelevantFuerStatistik": true,
  "istSichtbar": true,
  "kuerzel": "ALBE",
  "nachname": "Albers",
  "personTyp": "LEHRKRAFT",
  "referenziertInAnderenTabellen": true,
  "sortierung": 106,
  "titel": "",
  "vorname": "Mike",
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerPersonaldaten 1`] = `
LehrerPersonaldaten {
  "abgangsdatum": null,
  "abgangsgrund": null,
  "abschnittsdaten": ArrayList {
    "addFirst": [Function],
    "addLast": [Function],
    "elementData": [
      LehrerPersonalabschnittsdaten {
        "anrechnungen": ArrayList {
          "addFirst": [Function],
          "addLast": [Function],
          "elementData": [],
          "getFirst": [Function],
          "getLast": [Function],
          "modCount": 0,
          "removeFirst": [Function],
          "removeLast": [Function],
        },
        "beschaeftigungsart": "V",
        "einsatzstatus": "*",
        "funktionen": ArrayList {
          "addFirst": [Function],
          "addLast": [Function],
          "elementData": [],
          "getFirst": [Function],
          "getLast": [Function],
          "modCount": 0,
          "removeFirst": [Function],
          "removeLast": [Function],
        },
        "id": 76,
        "idLehrer": 76,
        "idSchuljahresabschnitt": 1,
        "mehrleistung": ArrayList {
          "addFirst": [Function],
          "addLast": [Function],
          "elementData": [],
          "getFirst": [Function],
          "getLast": [Function],
          "modCount": 0,
          "removeFirst": [Function],
          "removeLast": [Function],
        },
        "minderleistung": ArrayList {
          "addFirst": [Function],
          "addLast": [Function],
          "elementData": [],
          "getFirst": [Function],
          "getLast": [Function],
          "modCount": 0,
          "removeFirst": [Function],
          "removeLast": [Function],
        },
        "pflichtstundensoll": 25.5,
        "rechtsverhaeltnis": "L",
        "stammschulnummer": "123456",
      },
    ],
    "getFirst": [Function],
    "getLast": [Function],
    "modCount": 1,
    "removeFirst": [Function],
    "removeLast": [Function],
  },
  "fachrichtungen": ArrayList {
    "addFirst": [Function],
    "addLast": [Function],
    "elementData": [],
    "getFirst": [Function],
    "getLast": [Function],
    "modCount": 0,
    "removeFirst": [Function],
    "removeLast": [Function],
  },
  "id": 76,
  "identNrTeil1": "0208763",
  "identNrTeil2SerNr": "123X",
  "lbvPersonalnummer": "123456789",
  "lbvVerguetungsschluessel": "A",
  "lehraemter": ArrayList {
    "addFirst": [Function],
    "addLast": [Function],
    "elementData": [
      LehrerLehramtEintrag {
        "id": 76,
        "idAnerkennungsgrund": 1,
        "idLehramt": 96,
      },
    ],
    "getFirst": [Function],
    "getLast": [Function],
    "modCount": 1,
    "removeFirst": [Function],
    "removeLast": [Function],
  },
  "lehrbefaehigungen": ArrayList {
    "addFirst": [Function],
    "addLast": [Function],
    "elementData": [
      LehrerLehrbefaehigungEintrag {
        "id": 76,
        "idAnerkennungsgrund": 1,
        "idLehramt": -1,
        "idLehrbefaehigung": 203,
      },
      LehrerLehrbefaehigungEintrag {
        "id": 76,
        "idAnerkennungsgrund": 1,
        "idLehramt": -1,
        "idLehrbefaehigung": 216,
      },
      LehrerLehrbefaehigungEintrag {
        "id": 76,
        "idAnerkennungsgrund": 1,
        "idLehramt": -1,
        "idLehrbefaehigung": 226,
      },
    ],
    "getFirst": [Function],
    "getLast": [Function],
    "modCount": 3,
    "removeFirst": [Function],
    "removeLast": [Function],
  },
  "personalaktennummer": "123456789",
  "zugangsdatum": "2000-11-11",
  "zugangsgrund": "NEU",
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerRechtsverhaeltnisse 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 3,
      "kuerzel": "L",
      "schluessel": "L",
      "text": "Beamter auf Lebenszeit",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 2,
      "kuerzel": "P",
      "schluessel": "P",
      "text": "Beamter auf Probe",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 1,
      "kuerzel": "A",
      "schluessel": "A",
      "text": "Beamter auf Probe zur Anstellung",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 7,
      "kuerzel": "N",
      "schluessel": "N",
      "text": "Beamter, nebenamtlich (nicht hauptamtlich im Schuldienst)",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 9,
      "kuerzel": "W",
      "schluessel": "W",
      "text": "Beamter auf Widerruf (LAA)",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 4,
      "kuerzel": "U",
      "schluessel": "U",
      "text": "Angestellte, unbefristet (BAT-Vertrag)",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 5,
      "kuerzel": "B",
      "schluessel": "B",
      "text": "Angestellte, befristet (BAT-Vertrag)",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 6,
      "kuerzel": "J",
      "schluessel": "J",
      "text": "Angestellte, nicht BAT-Vertrag",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 8,
      "kuerzel": "S",
      "schluessel": "S",
      "text": "Gestellungsvertrag",
    },
    LehrerRechtsverhaeltnisKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 10,
      "kuerzel": "X",
      "schluessel": "X",
      "text": "Unentgeltlich Beschäftigte",
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 10,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerStammdaten 1`] = `
LehrerStammdaten {
  "amtsbezeichnung": "StD",
  "anrede": "Herr",
  "emailDienstlich": null,
  "emailPrivat": "T.Specking@lmail.de",
  "foto": null,
  "geburtsdatum": "1976-08-02",
  "geschlecht": 3,
  "hausnummer": "209",
  "hausnummerZusatz": "",
  "id": 76,
  "istRelevantFuerStatistik": true,
  "istSichtbar": true,
  "kuerzel": "SPEC",
  "leitungsfunktionen": ArrayList {
    "addFirst": [Function],
    "addLast": [Function],
    "elementData": [],
    "getFirst": [Function],
    "getLast": [Function],
    "modCount": 0,
    "removeFirst": [Function],
    "removeLast": [Function],
  },
  "nachname": "Specking",
  "ortsteilID": null,
  "personalTyp": "LEHRKRAFT",
  "staatsangehoerigkeitID": "DEU",
  "strassenname": "Friedrich-Wolf-Straße",
  "telefon": "01234-418192",
  "telefonMobil": "0197-851952",
  "titel": "",
  "vorname": "Torsten",
  "wohnortID": 414,
}
`;

exports[`Lehrer Tests  > gegen { schema: 'GymAbi01' } > getLehrerZugangsgruende 1`] = `
ArrayList {
  "addFirst": [Function],
  "addLast": [Function],
  "elementData": [
    LehrerZugangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 1,
      "kuerzel": "NEU",
      "schluessel": "1",
      "text": "Neueintritt in den Schuldienst mit abgelegter 2. Staatsprüfung oder anderweitig erfüllter Eingangsvoraussetzung",
    },
    LehrerZugangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 2,
      "kuerzel": "AndBuLand",
      "schluessel": "2",
      "text": "Übertritt aus dem Schuldienst eines anderen Bundeslandes",
    },
    LehrerZugangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 3,
      "kuerzel": "WECHSEL",
      "schluessel": "3",
      "text": "Wechsel innerhalb des Landes von einer anderen Schule an die berichtende Schule",
    },
    LehrerZugangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 4,
      "kuerzel": "WIEDER",
      "schluessel": "4",
      "text": "Wiedereintritt in den Schuldienst",
    },
    LehrerZugangsgrundKatalogEintrag {
      "gueltigBis": null,
      "gueltigVon": null,
      "id": 5,
      "kuerzel": "SONSTIG",
      "schluessel": "5",
      "text": "Sonstige Zugänge",
    },
  ],
  "getFirst": [Function],
  "getLast": [Function],
  "modCount": 5,
  "removeFirst": [Function],
  "removeLast": [Function],
}
`;
